--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores 
                 alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
         </section>
-        <img src="./assets/Imagem.png" alt="Foto da Joana Santos programando.">
+        <img class="apresentacao__imagem"  src="./assets/Imagem.png" alt="Foto da Joana Santos programando.">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Yan Arcanjo.</p>
